# stoat

./: .travis.yml  CMakeLists.txt  ChangeLog  README.adoc  run.rb  safety_finder.rb  stoat  stoat-compile  stoat-compile++
cmake/: FindLLVM.cmake  InstallScript.cmake
data/: blacklist.txt  whitelist.txt
doc/: stoat.1.txt
lib/: callgraph.rb  deductions.rb  graph.rb  load-callgraph.rb
src/: Makefile  llvm-passes.cpp  pass1.cpp
test/: confusing-multi-inherit.cpp  cpp-new-detection.cpp  diamond-confuse.cpp  diamond-inherit.cpp  function-pointer-call.cpp  function-pointer-resolution.cpp  function-pointer.c  implicit-methods.cpp  lambda-call.cpp  malloc-blacklist.c  math-safety.cpp  multiple-inherit.cpp  namespaces.cpp  run-test.rb  suppression_example.txt  suppression_two.txt  test-input.c  test-input.cpp  test-input2.cpp  test-input3.c  test-suppression.c  virtual-methods.cpp
